--- a/BallScrewControl.ui
+++ b/BallScrewControl.ui
@@ -148,7 +148,7 @@ qproperty-diameter: 20;
     <item row="0" column="1">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>6</number>
+       <number>7</number>
       </property>
       <widget class="QWidget" name="page1">
        <layout class="QGridLayout" name="gridLayout_2">
@@ -1532,8 +1532,8 @@ font: 15pt bold;</string>
              <widget class="PushButton" name="pushbutton_18">
               <property name="minimumSize">
                <size>
-                <width>50</width>
-                <height>50</height>
+                <width>42</width>
+                <height>42</height>
                </size>
               </property>
               <property name="styleSheet">
@@ -1548,8 +1548,8 @@ font: 15pt bold;</string>
              <widget class="PushButton" name="pushbutton_19">
               <property name="minimumSize">
                <size>
-                <width>50</width>
-                <height>50</height>
+                <width>42</width>
+                <height>42</height>
                </size>
               </property>
               <property name="styleSheet">
@@ -1719,7 +1719,7 @@ font: 15pt bold;</string>
             <item row="0" column="0" colspan="4">
              <widget class="LED" name="ledEnable32">
               <property name="diameter">
-               <number>100</number>
+               <number>20</number>
               </property>
              </widget>
             </item>
@@ -1807,7 +1807,7 @@ font: 15pt bold;</string>
              </sizepolicy>
             </property>
             <property name="diameter">
-             <number>50</number>
+             <number>20</number>
             </property>
            </widget>
           </item>
@@ -1815,15 +1815,15 @@ font: 15pt bold;</string>
            <widget class="PushButton" name="pushbutton_15">
             <property name="minimumSize">
              <size>
-              <width>100</width>
-              <height>100</height>
+              <width>42</width>
+              <height>42</height>
              </size>
             </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(138, 226, 52);</string>
             </property>
             <property name="icon">
-             <iconset resource="resources/BallScrewPanel.qrc">
+             <iconset>
               <normaloff>:/images/circular-arrow-left.png</normaloff>:/images/circular-arrow-left.png</iconset>
             </property>
             <property name="iconSize">
@@ -1838,15 +1838,15 @@ font: 15pt bold;</string>
            <widget class="PushButton" name="pushbutton_16">
             <property name="minimumSize">
              <size>
-              <width>100</width>
-              <height>100</height>
+              <width>42</width>
+              <height>42</height>
              </size>
             </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(239, 41, 41);</string>
             </property>
             <property name="icon">
-             <iconset resource="resources/BallScrewPanel.qrc">
+             <iconset>
               <normaloff>:/images/stop.png</normaloff>:/images/stop.png</iconset>
             </property>
             <property name="iconSize">
@@ -1861,8 +1861,8 @@ font: 15pt bold;</string>
            <widget class="PushButton" name="pushbutton_17">
             <property name="minimumSize">
              <size>
-              <width>100</width>
-              <height>100</height>
+              <width>42</width>
+              <height>42</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -1872,7 +1872,7 @@ font: 15pt bold;</string>
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="resources/BallScrewPanel.qrc">
+             <iconset>
               <normaloff>:/images/circular-arrow-right.png</normaloff>:/images/circular-arrow-right.png</iconset>
             </property>
             <property name="iconSize">
@@ -1892,7 +1892,7 @@ font: 15pt bold;</string>
              </sizepolicy>
             </property>
             <property name="diameter">
-             <number>50</number>
+             <number>20</number>
             </property>
            </widget>
           </item>
@@ -1994,32 +1994,6 @@ font: 15pt bold;</string>
        <layout class="QGridLayout" name="gridLayout_20">
         <item row="1" column="1">
          <layout class="QGridLayout" name="gridLayout_19">
-          <item row="1" column="2">
-           <widget class="LED" name="led_29"/>
-          </item>
-          <item row="1" column="1">
-           <widget class="LED" name="led_30"/>
-          </item>
-          <item row="0" column="1" colspan="2">
-           <widget class="PushButton" name="pushbutton_13">
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(138, 226, 52);</string>
-            </property>
-            <property name="text">
-             <string>|</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1" colspan="2">
-           <widget class="PushButton" name="pushbutton_14">
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(239, 41, 41);</string>
-            </property>
-            <property name="text">
-             <string>O</string>
-            </property>
-           </widget>
-          </item>
           <item row="1" column="0">
            <spacer name="horizontalSpacer_16">
             <property name="orientation">
@@ -2034,6 +2008,26 @@ font: 15pt bold;</string>
            </spacer>
           </item>
           <item row="1" column="3">
+           <widget class="LED" name="led_29"/>
+          </item>
+          <item row="0" column="2" colspan="2">
+           <widget class="ActionButton" name="btnDevice_On33">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(138, 226, 52);</string>
+            </property>
+            <property name="icon">
+             <iconset resource="BallScrewControl.qrc">
+              <normaloff>:/resources/vertical_line.png</normaloff>:/resources/vertical_line.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>40</width>
+              <height>40</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="4">
            <spacer name="horizontalSpacer_17">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -2045,6 +2039,26 @@ font: 15pt bold;</string>
              </size>
             </property>
            </spacer>
+          </item>
+          <item row="1" column="2">
+           <widget class="LED" name="led_30"/>
+          </item>
+          <item row="2" column="2" colspan="2">
+           <widget class="ActionButton" name="btnDevice_Off33">
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(239, 41, 41);</string>
+            </property>
+            <property name="icon">
+             <iconset resource="BallScrewControl.qrc">
+              <normaloff>:/resources/circle.png</normaloff>:/resources/circle.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>40</width>
+              <height>40</height>
+             </size>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -2368,7 +2382,7 @@ font: 15pt bold;</string>
              </widget>
             </item>
             <item>
-             <widget class="QLineEdit" name="lineEdit_6"/>
+             <widget class="MDILine" name="mdiline"/>
             </item>
             <item>
              <widget class="QPushButton" name="pushButton_17">
@@ -2390,7 +2404,7 @@ font: 15pt bold;</string>
                <string>Пуск</string>
               </property>
               <property name="icon">
-               <iconset resource="resources/BallScrewPanel.qrc">
+               <iconset>
                 <normaloff>:/images/play.png</normaloff>:/images/play.png</iconset>
               </property>
               <property name="iconSize">
@@ -2401,8 +2415,15 @@ font: 15pt bold;</string>
               </property>
              </widget>
             </item>
+            <item row="1" column="0" rowspan="2">
+             <widget class="GcodeDisplay" name="gcode_display">
+              <property name="auto_show_mdi_status" stdset="0">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
             <item row="0" column="0" alignment="Qt::AlignLeft">
-             <widget class="QPushButton" name="pushButton_19">
+             <widget class="QPushButton" name="btnLoadFile33">
               <property name="text">
                <string>Загрузить УП</string>
               </property>
@@ -2417,7 +2438,7 @@ font: 15pt bold;</string>
                <string>Стоп</string>
               </property>
               <property name="icon">
-               <iconset resource="resources/BallScrewPanel.qrc">
+               <iconset>
                 <normaloff>:/images/stop.png</normaloff>:/images/stop.png</iconset>
               </property>
               <property name="iconSize">
@@ -3039,7 +3060,7 @@ font: 15pt bold;</string>
                <string>Пуск</string>
               </property>
               <property name="icon">
-               <iconset resource="resources/BallScrewPanel.qrc">
+               <iconset>
                 <normaloff>:/images/play.png</normaloff>:/images/play.png</iconset>
               </property>
               <property name="iconSize">
@@ -3059,7 +3080,7 @@ font: 15pt bold;</string>
                <string>Пауза</string>
               </property>
               <property name="icon">
-               <iconset resource="resources/BallScrewPanel.qrc">
+               <iconset>
                 <normaloff>:/images/pause.png</normaloff>:/images/pause.png</iconset>
               </property>
               <property name="iconSize">
@@ -3079,7 +3100,7 @@ font: 15pt bold;</string>
                <string>Стоп</string>
               </property>
               <property name="icon">
-               <iconset resource="resources/BallScrewPanel.qrc">
+               <iconset>
                 <normaloff>:/images/stop.png</normaloff>:/images/stop.png</iconset>
               </property>
               <property name="iconSize">
@@ -3294,12 +3315,34 @@ font: 15pt bold;</string>
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="page">
+       <layout class="QGridLayout" name="gridLayout_39">
+        <item row="0" column="0">
+         <widget class="MDILine" name="mdiline_2"/>
+        </item>
+        <item row="1" column="0">
+         <widget class="MDIHistory" name="mdihistory"/>
+        </item>
+        <item row="1" column="1">
+         <widget class="GcodeDisplay" name="gcode_display_2"/>
+        </item>
+        <item row="2" column="1">
+         <widget class="GcodeEditor" name="gcode_editor"/>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>MDILine</class>
+   <extends>QLineEdit</extends>
+   <header>qtvcp.widgets.mdi_line</header>
+   <container>1</container>
+  </customwidget>
   <customwidget>
    <class>StateLabel</class>
    <extends>QLabel</extends>
@@ -3321,6 +3364,28 @@ font: 15pt bold;</string>
    <header>qtvcp.widgets.simple_widgets</header>
   </customwidget>
   <customwidget>
+   <class>GcodeDisplay</class>
+   <extends>QFrame</extends>
+   <header>qtvcp.widgets.gcode_editor</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>GcodeEditor</class>
+   <extends>QWidget</extends>
+   <header>qtvcp.widgets.gcode_editor</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>MDIHistory</class>
+   <extends>QWidget</extends>
+   <header>qtvcp.widgets.mdi_history</header>
+  </customwidget>
+  <customwidget>
+   <class>ActionButton</class>
+   <extends>QPushButton</extends>
+   <header>qtvcp.widgets.action_button</header>
+  </customwidget>
+  <customwidget>
    <class>PlotWidget</class>
    <extends>QWidget</extends>
    <header>pyqtgraph</header>
@@ -3328,7 +3393,7 @@ font: 15pt bold;</string>
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="resources/BallScrewPanel.qrc"/>
+  <include location="BallScrewControl.qrc"/>
  </resources>
  <connections>
   <connection>
@@ -3338,8 +3403,8 @@ font: 15pt bold;</string>
    <slot>onBtnNext1()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>224</x>
-     <y>77</y>
+     <x>698</x>
+     <y>755</y>
     </hint>
     <hint type="destinationlabel">
      <x>614</x>
@@ -3498,12 +3563,44 @@ font: 15pt bold;</string>
    <slot>onBtnNext2()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>657</x>
-     <y>711</y>
+     <x>234</x>
+     <y>50</y>
     </hint>
     <hint type="destinationlabel">
      <x>83</x>
      <y>768</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnLoadFile33</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onBtnLoadFile33()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>225</x>
+     <y>630</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>252</x>
+     <y>771</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_15</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onBtnLoadFile34()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>325</x>
+     <y>575</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>91</x>
+     <y>754</y>
     </hint>
    </hints>
   </connection>
@@ -3520,5 +3617,7 @@ font: 15pt bold;</string>
   <slot>onBtnTempShow32()</slot>
   <slot>onBtnTempShow31()</slot>
   <slot>onBtnNext2()</slot>
+  <slot>onBtnLoadFile33()</slot>
+  <slot>onBtnLoadFile34()</slot>
  </slots>
 </ui>
