--- a/BallScrewVCP1.ui
+++ b/BallScrewVCP1.ui
@@ -70,29 +70,13 @@ font: 15pt bold;</string>
         </item>
         <item row="3" column="0">
          <layout class="QGridLayout" name="gridLayout_10">
-          <item row="1" column="1">
-           <widget class="Slider" name="sldAcceleration31">
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="tickPosition">
-             <enum>QSlider::TicksBelow</enum>
-            </property>
-           </widget>
+          <item row="0" column="2">
+           <widget class="QDoubleSpinBox" name="spnVelocity31"/>
           </item>
-          <item row="0" column="1">
-           <widget class="Slider" name="sldVelocity31">
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="tickPosition">
-             <enum>QSlider::TicksBelow</enum>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_54">
+            <property name="text">
+             <string>Ускорение, мм/с&lt;sup&gt;2&lt;/sup&gt;</string>
             </property>
            </widget>
           </item>
@@ -103,18 +87,22 @@ font: 15pt bold;</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_54">
-            <property name="text">
-             <string>Ускорение, мм/с&lt;sup&gt;2&lt;/sup&gt;</string>
+          <item row="1" column="2">
+           <widget class="QDoubleSpinBox" name="spnAcceleration31"/>
+          </item>
+          <item row="0" column="1">
+           <widget class="Slider" name="sldVelocity31">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
             </property>
            </widget>
           </item>
-          <item row="0" column="2">
-           <widget class="QDoubleSpinBox" name="spnVelocity31"/>
-          </item>
-          <item row="1" column="2">
-           <widget class="QDoubleSpinBox" name="spnAcceleration31"/>
+          <item row="1" column="1">
+           <widget class="Slider" name="sldAcceleration31">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -517,5 +505,9 @@ append_file</string>
   <slot>onBtnTempShow31()</slot>
   <slot>onBtnTestActive0(bool)</slot>
   <slot>onBtnSaveState31()</slot>
+  <slot>onSldVelocity31Moved()</slot>
+  <slot>onSldAcceleration31Moved()</slot>
+  <slot>onSpnVelocity31Changed()</slot>
+  <slot>onSpnAcceleration31Changed()</slot>
  </slots>
 </ui>
