--- a/BallScrewVCP2.ui
+++ b/BallScrewVCP2.ui
@@ -197,8 +197,8 @@ font: 15pt bold;</string>
                <string notr="true">background-color: rgb(138, 226, 52);</string>
               </property>
               <property name="icon">
-               <iconset resource="BallScrewVCP.qrc">
-                <normaloff>:/resources/vertical_line.png</normaloff>:/resources/vertical_line.png</iconset>
+               <iconset>
+                <normaloff>resources/vertical_line.png</normaloff>resources/vertical_line.png</iconset>
               </property>
               <property name="iconSize">
                <size>
@@ -228,8 +228,8 @@ font: 15pt bold;</string>
                <string notr="true">background-color: rgb(239, 41, 41);</string>
               </property>
               <property name="icon">
-               <iconset resource="BallScrewVCP.qrc">
-                <normaloff>:/resources/circle.png</normaloff>:/resources/circle.png</iconset>
+               <iconset>
+                <normaloff>resources/circle.png</normaloff>resources/circle.png</iconset>
               </property>
               <property name="iconSize">
                <size>
@@ -646,14 +646,17 @@ qproperty-diameter: 100;</string>
              <string notr="true">background-color: rgb(138, 226, 52);</string>
             </property>
             <property name="icon">
-             <iconset resource="BallScrewVCP.qrc">
-              <normaloff>:/resources/circular-arrow-left.png</normaloff>:/resources/circular-arrow-left.png</iconset>
+             <iconset>
+              <normaloff>resources/circular-arrow-left.png</normaloff>resources/circular-arrow-left.png</iconset>
             </property>
             <property name="iconSize">
              <size>
               <width>80</width>
               <height>80</height>
              </size>
+            </property>
+            <property name="checkable">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -669,8 +672,8 @@ qproperty-diameter: 100;</string>
              <string notr="true">background-color: rgb(239, 41, 41);</string>
             </property>
             <property name="icon">
-             <iconset resource="BallScrewVCP.qrc">
-              <normaloff>:/resources/stop.png</normaloff>:/resources/stop.png</iconset>
+             <iconset>
+              <normaloff>resources/stop.png</normaloff>resources/stop.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -695,14 +698,17 @@ qproperty-diameter: 100;</string>
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="BallScrewVCP.qrc">
-              <normaloff>:/resources/circular-arrow-right.png</normaloff>:/resources/circular-arrow-right.png</iconset>
+             <iconset>
+              <normaloff>resources/circular-arrow-right.png</normaloff>resources/circular-arrow-right.png</iconset>
             </property>
             <property name="iconSize">
              <size>
               <width>80</width>
               <height>80</height>
              </size>
+            </property>
+            <property name="checkable">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -917,9 +923,7 @@ append_title</string>
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="BallScrewVCP.qrc"/>
- </resources>
+ <resources/>
  <connections/>
  <slots>
   <slot>onBtnTempShow34()</slot>
