--- a/BallScrewVCP3.ui
+++ b/BallScrewVCP3.ui
@@ -144,13 +144,6 @@ qproperty-diameter: 20;
               </property>
              </widget>
             </item>
-            <item row="0" column="0" colspan="3">
-             <widget class="QLabel" name="label_85">
-              <property name="text">
-               <string>Перемещение</string>
-              </property>
-             </widget>
-            </item>
             <item row="2" column="4">
              <widget class="QLabel" name="label_83">
               <property name="text">
@@ -179,45 +172,52 @@ qproperty-diameter: 20;
               </property>
              </widget>
             </item>
+            <item row="0" column="0" colspan="3">
+             <widget class="CheckBox" name="chkDsp_Mode33">
+              <property name="text">
+               <string>Перемещение</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
           <item>
            <layout class="QGridLayout" name="gridLayout_30">
-            <item row="0" column="1">
+            <item row="0" column="2">
              <widget class="QLabel" name="label_87">
               <property name="text">
                <string>Нагрузка расчётная, кгс</string>
               </property>
              </widget>
             </item>
-            <item row="0" column="0">
-             <widget class="QCheckBox" name="chkDsp_Mode33">
-              <property name="text">
-               <string>Нагружение</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
+            <item row="1" column="2">
              <widget class="QLabel" name="label_86">
               <property name="text">
                <string>Нагрузка фактическая, кгс</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
-             <widget class="LED" name="ledAt_Load33"/>
-            </item>
-            <item row="0" column="2">
+            <item row="0" column="3">
              <widget class="QLabel" name="lblLoad33">
               <property name="text">
                <string>---</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="2">
+            <item row="1" column="0">
+             <widget class="LED" name="ledAt_Load33"/>
+            </item>
+            <item row="1" column="3">
              <widget class="QLabel" name="lblLoadActual33">
               <property name="text">
                <string>---</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0">
+             <widget class="CheckBox" name="chkLoad_Active33">
+              <property name="text">
+               <string>Нагружение</string>
               </property>
              </widget>
             </item>
@@ -414,7 +414,7 @@ qproperty-diameter: 20;
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton_17">
+             <widget class="QPushButton" name="btnCommand_Run33">
               <property name="text">
                <string>Исполнить</string>
               </property>
@@ -1107,6 +1107,11 @@ font: bold</string>
   <customwidget>
    <class>PushButton</class>
    <extends>QPushButton</extends>
+   <header>qtvcp.widgets.simple_widgets</header>
+  </customwidget>
+  <customwidget>
+   <class>CheckBox</class>
+   <extends>QCheckBox</extends>
    <header>qtvcp.widgets.simple_widgets</header>
   </customwidget>
   <customwidget>
