--- a/BallScrewVCP3.ui
+++ b/BallScrewVCP3.ui
@@ -110,49 +110,15 @@ qproperty-diameter: 20;
           </item>
           <item>
            <layout class="QGridLayout" name="gridLayout_17">
-            <item row="1" column="5">
-             <widget class="QLabel" name="lblPosition33">
+            <item row="2" column="6">
+             <widget class="QLabel" name="lblPosition_Actual33">
               <property name="text">
                <string>---</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="2" rowspan="2">
-             <widget class="QPushButton" name="btnJog_Plus33">
-              <property name="text">
-               <string/>
-              </property>
-              <property name="icon">
-               <iconset resource="BallScrewVCP.qrc">
-                <normaloff>:/resources/caret_right.png</normaloff>:/resources/caret_right.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>40</width>
-                <height>40</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1" rowspan="2">
-             <widget class="LED" name="ledOn_Position33"/>
-            </item>
-            <item row="1" column="4">
-             <widget class="QLabel" name="label_84">
-              <property name="text">
-               <string>Положение расчётное, мм</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="4">
-             <widget class="QLabel" name="label_83">
-              <property name="text">
-               <string>Положение фактическое, мм</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="5">
-             <widget class="QLabel" name="lblPosition_Actual33">
+            <item row="1" column="6">
+             <widget class="QLabel" name="lblPosition33">
               <property name="text">
                <string>---</string>
               </property>
@@ -161,8 +127,8 @@ qproperty-diameter: 20;
             <item row="1" column="0" rowspan="2">
              <widget class="PushButton" name="btnJog_Minus33">
               <property name="icon">
-               <iconset resource="BallScrewVCP.qrc">
-                <normaloff>:/resources/caret_left.png</normaloff>:/resources/caret_left.png</iconset>
+               <iconset>
+                <normaloff>resources/caret_left.png</normaloff>resources/caret_left.png</iconset>
               </property>
               <property name="iconSize">
                <size>
@@ -172,10 +138,41 @@ qproperty-diameter: 20;
               </property>
              </widget>
             </item>
-            <item row="0" column="0" colspan="3">
+            <item row="2" column="5">
+             <widget class="QLabel" name="label_83">
+              <property name="text">
+               <string>Положение фактическое, мм</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0" colspan="4">
              <widget class="CheckBox" name="chkDsp_Mode33">
               <property name="text">
                <string>Перемещение</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_84">
+              <property name="text">
+               <string>Положение расчётное, мм</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1" rowspan="2">
+             <widget class="LED" name="ledOn_Position33"/>
+            </item>
+            <item row="1" column="2" rowspan="2">
+             <widget class="PushButton" name="btnJog_Plus33">
+              <property name="icon">
+               <iconset>
+                <normaloff>resources/caret_right.png</normaloff>resources/caret_right.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>40</width>
+                <height>40</height>
+               </size>
               </property>
              </widget>
             </item>
@@ -545,8 +542,8 @@ qproperty-diameter: 20;
              <string notr="true">background-color: rgb(239, 41, 41);</string>
             </property>
             <property name="icon">
-             <iconset resource="BallScrewVCP.qrc">
-              <normaloff>:/resources/circle.png</normaloff>:/resources/circle.png</iconset>
+             <iconset>
+              <normaloff>resources/circle.png</normaloff>resources/circle.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -576,8 +573,8 @@ qproperty-diameter: 20;
              <string notr="true">background-color: rgb(138, 226, 52);</string>
             </property>
             <property name="icon">
-             <iconset resource="BallScrewVCP.qrc">
-              <normaloff>:/resources/vertical_line.png</normaloff>:/resources/vertical_line.png</iconset>
+             <iconset>
+              <normaloff>resources/vertical_line.png</normaloff>resources/vertical_line.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -1132,9 +1129,7 @@ font: bold</string>
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="BallScrewVCP.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>btnLoadGCode33</sender>
