--- a/BallScrewVCP3.ui
+++ b/BallScrewVCP3.ui
@@ -960,6 +960,22 @@ background-image: url(./resources/stripes.png);
 }</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_2">
+           <item row="8" column="0">
+            <widget class="PushButton" name="btnAppend_Buffer33">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string>append_buffer</string>
+             </property>
+             <property name="checkable">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="0">
+            <widget class="QWidget" name="widget_2" native="true"/>
+           </item>
            <item row="5" column="0">
             <widget class="PushButton" name="btnTestActive4">
              <property name="styleSheet">
@@ -973,6 +989,32 @@ background-image: url(./resources/stripes.png);
              </property>
             </widget>
            </item>
+           <item row="4" column="0">
+            <widget class="PushButton" name="btnTestActive3">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string>active_3</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="10" column="0">
+            <spacer name="verticalSpacer_3">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
            <item row="3" column="0">
             <widget class="PushButton" name="btnTestActive2">
              <property name="styleSheet">
@@ -983,6 +1025,21 @@ background-image: url(./resources/stripes.png);
              </property>
              <property name="checkable">
               <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label">
+             <property name="styleSheet">
+              <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(239, 41, 41);
+font: bold</string>
+             </property>
+             <property name="text">
+              <string>Для тестов</string>
+             </property>
+             <property name="margin">
+              <number>5</number>
              </property>
             </widget>
            </item>
@@ -1002,31 +1059,18 @@ background-image: url(./resources/stripes.png);
              </property>
             </widget>
            </item>
-           <item row="4" column="0">
-            <widget class="PushButton" name="btnTestActive3">
+           <item row="2" column="0">
+            <widget class="PushButton" name="btnTestActive1">
              <property name="styleSheet">
               <string notr="true">background-color: rgb(252, 233, 79);</string>
              </property>
              <property name="text">
-              <string>active_3</string>
+              <string>active_1</string>
              </property>
              <property name="checkable">
               <bool>true</bool>
              </property>
             </widget>
-           </item>
-           <item row="7" column="0">
-            <spacer name="verticalSpacer_3">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
            </item>
            <item row="6" column="0">
             <widget class="PushButton" name="btnTestActive5">
@@ -1041,31 +1085,16 @@ background-image: url(./resources/stripes.png);
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="PushButton" name="btnTestActive1">
+           <item row="9" column="0">
+            <widget class="PushButton" name="btnAppend_File33">
              <property name="styleSheet">
               <string notr="true">background-color: rgb(252, 233, 79);</string>
              </property>
              <property name="text">
-              <string>active_1</string>
+              <string>append_file</string>
              </property>
              <property name="checkable">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label">
-             <property name="styleSheet">
-              <string notr="true">color: rgb(255, 255, 255);
-background-color: rgb(239, 41, 41);
-font: bold</string>
-             </property>
-             <property name="text">
-              <string>Для тестов</string>
-             </property>
-             <property name="margin">
-              <number>5</number>
+              <bool>false</bool>
              </property>
             </widget>
            </item>
